KeePassDroid (0.1.8)

  * Move database decryption into background thread
  * Add about dialog

KeePassDroid (0.1.7)

  * Clear usernames and passwords from the clipboard after 30 seconds.

KeePassDroid (0.1.6)

  * Implement 5 minute timeout when the application is inactive.
  * Scroll comment field when the text overflows.

KeePassDroid (0.1.5)

  * Improve file selection
  * UI enhancements

KeePassDroid (0.1.4)

  * Add key file support

KeePassDroid (0.1.3)

  * Hide Meta-Info entries
  * Change "Copy URL" to "Go to URL"
  * Support "Go to Homepage"
  * Support Lock menu option
  * Fix blank password crash

KeePassDroid (0.1.2)

  * Fix crash when accessing the first root level group.

KeePassDroid (0.1.1)

  * Minor tweaks to layout.

KeePassdroid (0.0.1)

  * Initial Release