@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.android.keepass"
-      android:versionName="0.1.8" android:versionCode="9">
+      android:versionCode="10" android:versionName="0.2.0">
+    <uses-sdk android:minSdkVersion="1"/>
     <application android:label="@string/app_name" android:icon="@drawable/keepass_icon">
         <activity android:name=".KeePass"
                   android:label="@string/app_name">
