@@ -44,10 +44,21 @@
 	  android:layout_below="@id/feedback"
 	  android:layout_alignParentRight="true"
 	  android:autoLink="web"/>
+	<ImageView android:id="@+id/divider2"
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  android:layout_below="@id/Twitter"
+	  android:scaleType="fitXY"
+	  android:src="@android:drawable/divider_horizontal_dark"/>
+	<TextView android:id="@+id/disclaimer" 
+	  android:layout_width="fill_parent"
+	  android:layout_height="wrap_content"
+	  android:layout_below="@id/divider2"
+	  android:text="@string/disclaimer_formal"/>
 	<Button android:id="@+id/about_button"
   	  android:layout_height="wrap_content"
   	  android:layout_width="wrap_content"
-  	  android:layout_below="@id/Twitter"
+  	  android:layout_below="@id/disclaimer"
   	  android:layout_centerHorizontal="true"
   	  android:text="@string/about_ok"
   	  android:width="100sp"/>
