@@ -33,7 +33,7 @@
 <string name="current_group_root">Current Group: Root</string>
 <string name="ClearClipboard">Clipboard cleared.</string>
 <string name="menu_about">About</string>
-<string name="AboutText">KeePassDroid is an Android implementation of the KeePass password manager. Currently KeePassDroid can only view databases.  It cannot yet create and edit databases.  For now, you'll need to create a KeePass database on your PC and transfer it to your SD card.</string>
+<string name="AboutText">KeePassDroid is an Android implementation of the KeePass password manager. Currently KeePassDroid can only view databases.  It cannot yet create databases.  For now, you will need to create a KeePass database on your PC and transfer it to your SD card.</string>
 <string name="about_feedback">Feedback:</string>
 <string name="about_homepage">Homepage:</string>
 <string name="about_twitter">Twitter:</string>
@@ -44,4 +44,6 @@
 <string name="entry_save">Save</string>
 <string name="entry_cancel">Cancel</string>
 <string name="entry_confpassword">Confirm password:</string>
+
+<string name="disclaimer_formal">KeePassDroid Copyright 2009 Brian Pellin comes with ABSOLUTELY NO WARRANTY; This is free software, and you are welcome to redistribute it under the conditions of the GPL version 2 or later.</string>
 </resources>
