@@ -30,7 +30,9 @@ public class KeePass extends Activity {
 
 	public static final int EXIT_NORMAL = 0;
 	public static final int EXIT_LOCK = 1;
-	
+	public static final int EXIT_REFRESH = 2;
+	public static final int EXIT_REFRESH_TITLE = 3;
+
 	@Override
 	protected void onCreate(Bundle savedInstanceState) {
 		super.onCreate(savedInstanceState);
